add the exception handler
