# student_service/src/main/resources/openapi/student-api-v1.yaml
@@ -88,3 +88,33 @@ components:
           type: string
         school:
           type: string
+
+#Error responses
+    ErrorResponse:
+      description: "An array of detail error codes, and messages, and URLs to documentation to help remediation."
+      type: "object"
+      additionalProperties: false
+      properties:
+        Errors:
+          items:
+            $ref: "#/components/schemas/Error"
+          type: "array"
+          minItems: 1
+      required:
+        - "Errors"
+    Error:
+      type: "object"
+      additionalProperties: false
+      properties:
+        Code:
+          description: "Low level textual error code, e.g., Field.Missing"
+          type: "string"
+        Message:
+          description: "A description of the error that occurred. "
+          type: "string"
+          minLength: 1
+          maxLength: 500
+      required:
+        - "Code"
+        - "Message"
+      minProperties: 1
